Adjust padding to make sure text doesn't overlap with icon

--- a/src/styles/municipalities.scss
+++ b/src/styles/municipalities.scss
@@ -60,7 +60,7 @@
             .c-container {
                 .c-button {
                     .c-button--text {
-                        padding-right: 20px;
+                        padding-right: 35px;
                     }
                 }
             }
